# skilltest-buienradar

./: CLAUDE.md  ERD.md  README.md  alembic.ini  analysis.ipynb  automation.md  main.py  pyproject.toml  pytest.ini  suggestion.md  todo.md  visualization.pbix  weather_data.db
alembic/: env.py
alembic/versions/: 35e742296742_add_measurements_and_wheather_station_.py  75399401f96d_add_measurements_and_wheather_station_.py  7e73e8bb14d3_first_migrations.py
src/cli/: main.py
src/skilltest/: config.py  database.py  dataframe_converter.py  etl.py
src/skilltest/buienradar/: __init__.py  pipeline.py  schema.py
src/skilltest/core/: pipeline.py
src/skilltest/core/analysis/: __init__.py  dataframe_converter.py
src/skilltest/core/etl/: pipeline.py
src/skilltest/core/etl/extract/: fetch_item.py
src/skilltest/core/etl/load/: model_loader.py
src/skilltest/core/etl/transform/: abstract_transformer.py  dict_to_pydantic_transformer.py  from_json_entry_transformer.py
src/skilltest/core/extract/: __init__.py  abstract_source.py  http_source.py
src/skilltest/core/transform/: __init__.py  from_json_entry_transformer.py  pydantic_to_pydantic_transformer.py
src/skilltest/models/: __init__.py  measurement.py  weather_station.py
tests/: conftest.py
tests/src/core/: test_pipeline.py
