[project]
name = "skilltest-buienradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.4",
    "cyclopts>=3.22.5",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "polars>=1.32.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
    "structlog>=25.4.0",
]
